--- a/index.html
+++ b/index.html
@@ -42,18 +42,16 @@
               <p>Друштво за сервисирање и монтажа на лифтови</p>
 <p>Сезал Зоран Дооел</p>
 <p>ЕДБ: МК 4057024571323</p>
-<p>Жиро сметка: 210077816280198</p>
-<p>Депонент: НЛБ Банка - Скопје</p>
+<p>Жиро сметка: 210077816280198 Депонент: НЛБ Банка - Скопје</p>
+<!-- <p>Депонент: НЛБ Банка - Скопје</p> -->
 <p>адреса: МАНАПО 7/1-99 , 1000 Скопје, Р.С. Македонија</p>
-<p>е-пошта: zlatko@sezal.mk</p>
+<p>е-пошта: info@sezal.mk</p>
             </div>
             <img src="iso.svg" alt="iso" class="iso" />
         </div>
         <div class="top">
           <div class="block">
-            <div class="header">
-              <div class="meta title">Понуда</div>
-            </div>
+            
             <div class="info"><span class="meta">Број на понуда</span> #{{ invoice.Number }}</div>
             <div class="info" v-if="invoice.Issued"><div class="meta date-tag">Датум</div> {{ invoice.Issued | asDate }}</div>
             <div class="info" v-if="invoice.Due"><div class="meta date-tag">Рок на плаќање</div> {{ invoice.Due | asDate }}</div>
@@ -111,12 +109,15 @@
         </div>
         </div>
         
-
+            <div class="header">
+              <div class="meta title">Понуда</div>
+              <div class="text">за </div>
+			</div>
 
         <table class="items">
           <template v-if="!Array.isArray(invoice.Items)">
             <tr>
-              <th>Description</th>
+              <th>Description</th> 
               <th class="money">Total</th>
             </tr>
             <tr>
@@ -126,7 +127,7 @@
           </template>
           <template v-else>
             <tr>
-              <th>Назив</th>
+              <th class="naziv">Назив</th>
               <th class="text">Мерка</th>
               <th class="money">Цена</th>
               <th class="number">Количина</th>
@@ -201,9 +202,12 @@
         </template>
 
         <div class="footer">
-          <div class="thanks">
-            Thank you!
+          <div class="zabeleska">
+            Забелешка: 
           </div>
+		  <div class="izrabotil">
+		      <p>Изработил:</p>
+			  <p>Златко Максимовски</p>
         </div>
 
         <div class="print">
